Add Limerick plugin